<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="it_is_not_possible_to_select_photos_and_videos_at_the_same_time">It is not possible to select photos
        and videos at the same time
    </string>
    <string name="you_may_not_select_more_than_10_photos">You may not select more than 10 photos</string>
    <string name="you_may_not_select_more_than">You may not select more than</string>
    <string name="item">item</string>
    <string name="error_while_capture_the_photo_or_video_empty_file">Error while capture the photo or video, empty
        file
    </string>
    <string name="all">All</string>
    <string name="choose_album">Choose Album</string>

    <string name="you_should_allow_all_permissions_to_fetch_gallery_images">You should allow all permissions to fetch gallery images</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="you_may_not_select_more_than_s_item">You can\'t select more than %s item</string>
    <string name="please_wait">Please wait...</string>
    <string name="free">Free</string>
    <string name="_1_1">1:1</string>
    <string name="_3_4">3:4</string>
    <string name="_2_1">2:1</string>
    <string name="_16_9">16:9</string>
    <string name="_1_2">1:2</string>
    <string name="_4_3">4:3</string>
    <string name="_9_16">9:16</string>
    <string name="_3_2">3:2</string>
    <string name="_2_3">2:3</string>

    <string name="cab_title_x">Selection (%1$d)</string>
    <string name="range_selection">Range Selection</string>
    <string name="path_selection">Path Selection</string>
    <string name="all_albums">All Albums</string>
</resources>