<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="showCounter"
            type="Boolean" />

        <variable
            name="viewModel"
            type="hashim.gallerylib.view.crop.CropViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/gallery_item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_0">

        <RelativeLayout
            android:id="@+id/layoutActionBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_55"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgviewBack"
                android:layout_width="@dimen/padding_40"
                android:layout_height="@dimen/padding_40"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@drawable/circle_bg_transparent_strok_white_with_transparent_gray_selector"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->viewModel.observer.onBackClicked()}"
                android:padding="@dimen/padding_12"
                android:src="@drawable/back_white_icon"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnGalleryOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle_bg_transparent_strok_white_with_transparent_gray_selector"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/padding_12"
                    android:onClick="@{()->viewModel.observer.finishWithSuccess()}"
                    android:scaleType="fitCenter"
                    android:src="@drawable/done_white_icon"
                    app:tint="@color/black" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/padding_20">

                <ImageView
                    android:id="@+id/imgviewRotate"
                    android:layout_width="@dimen/padding_40"
                    android:layout_height="@dimen/padding_40"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle_bg_transparent_with_transparent_gray_selector"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/padding_5"
                    android:src="@drawable/rotate_white_icon" />

                <ImageView
                    android:id="@+id/imgViewFlipHorizontal"
                    android:layout_width="@dimen/padding_40"
                    android:layout_height="@dimen/padding_40"
                    android:layout_marginStart="@dimen/padding_20"
                    android:background="@drawable/circle_bg_transparent_with_transparent_gray_selector"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.flipHorizontal()}"
                    android:padding="@dimen/padding_5"
                    android:src="@drawable/flip_horizontal_white_icon" />

                <ImageView
                    android:id="@+id/imgViewFlipVertical"
                    android:layout_width="@dimen/padding_40"
                    android:layout_height="@dimen/padding_40"
                    android:layout_marginStart="@dimen/padding_20"
                    android:background="@drawable/circle_bg_transparent_with_transparent_gray_selector"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.flipVertical()}"
                    android:padding="@dimen/padding_5"
                    android:src="@drawable/flip_vertical_white_icon" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_20"
                    android:checkedButton="@+id/radioFree"
                    android:gravity="center"
                    android:onCheckedChanged="@{viewModel.onRadioChanged}"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioFree"
                        android:layout_width="@dimen/padding_25"
                        android:layout_height="@dimen/padding_25"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_10"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/free"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioOneOne"
                        android:layout_width="@dimen/padding_20"
                        android:layout_height="@dimen/padding_20"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_1_1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioTwoOne"
                        android:layout_width="@dimen/padding_30"
                        android:layout_height="@dimen/padding_15"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_2_1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioOneTwo"
                        android:layout_width="@dimen/padding_20"
                        android:layout_height="@dimen/padding_35"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_1_2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioThreeFour"
                        android:layout_width="@dimen/padding_18"
                        android:layout_height="@dimen/padding_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_3_4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioFourThree"
                        android:layout_width="@dimen/padding_24"
                        android:layout_height="@dimen/padding_18"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_4_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioNineSixteen"
                        android:layout_width="@dimen/padding_24"
                        android:layout_height="@dimen/padding_34"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_9_16"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioSixteenNine"
                        android:layout_width="@dimen/padding_32"
                        android:layout_height="@dimen/padding_20"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_16_9"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioThreeTwo"
                        android:layout_width="@dimen/padding_25"
                        android:layout_height="@dimen/padding_16"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_3_2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                    <RadioButton
                        android:id="@+id/radioTwoThree"
                        android:layout_width="@dimen/padding_19"
                        android:layout_height="@dimen/padding_25"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/padding_20"
                        android:layout_marginEnd="@dimen/padding_20"
                        android:background="@drawable/rectangle_crop_ratio_transparent_stroke_white_normal_color_primary_checked"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/_2_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_10" />

                </RadioGroup>

            </HorizontalScrollView>

        </LinearLayout>

        <com.canhub.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layoutSettings"
            android:layout_below="@id/layoutActionBar"
            android:background="@color/black"
            app:cropBorderCornerColor="@color/cardview_shadow_start_color"
            app:cropShowLabel="true" />

    </RelativeLayout>

</layout>